image: fix when image is too narrow for the whole screen

--- a/src/components/News/MainImg/MainImg.css
+++ b/src/components/News/MainImg/MainImg.css
@@ -3,6 +3,7 @@
     width: 100%;
     object-fit: contain;
     overflow: hidden;
+    text-align: center;
 }
 
 .article-post .article-main-img img {
